# zephyr-applications

./: README.md
ble/: README.md
ble/custom_service/: README.md  bf.sh  prj.conf
ble/custom_service_v2/: CMakeLists.txt  README.md  bf.sh  prj.conf
ble/custom_service_v2/src/: ble_cus.c  ble_cus.h  main.c
ble/my_ble_bas/: README.md
ble/nordic_custom_service/: CMakeLists.txt  README.md  bf.sh  prj.conf
ble/nordic_custom_service/services/: my_service.c  my_service.h
ble/nordic_custom_service/src/: main.c
ble/samples/bt-fund/lesson1/blefund_less1_exer1/: CMakeLists.txt
ble/samples/custom_service_unfinished/: README.md
ble/samples/custom_service_unfinished/src/: main.c
ble/silabs_custom_service/: CMakeLists.txt  README.md  b.sh  bf.sh
ble/silabs_custom_service/services/: my_service.c
ble/st_custom_service/: CMakeLists.txt  Kconfig  README.md  bf.sh
ble/st_custom_service/src/: main.c
conductor-sensor-emulator/: README.md
conductor-sensor-emulator/emulator/: CMakeLists.txt  Kconfig  prj.conf
conductor-sensor-emulator/emulator/services/: device_settings.c  sensor_info.c  services.c  services.h  wireless_security.c
conductor-sensor-emulator/emulator/src/: main.c
conductor-sensor-emulator/temp/: README.md  prj.conf
conductor-sensor-emulator/temp/src/: main.c
custom_service/: prj.conf
custom_service/src/: main.c
my_ble_bas/: CMakeLists.txt  prj.conf
my_ble_bas/src/: main.c
samples/custom_service_unfinished/: CMakeLists.txt  prj.conf
